More functions ready

--- a/simple_calc.html
+++ b/simple_calc.html
@@ -26,6 +26,7 @@
                 <div class="button" id="multiply">*</div>
                 <div class="button" id="subtract">-</div>
                 <div class="button" id="add">+</div>
+                <div class="button" id="clear">ce</div>
               </div>
     <body>
 <html>
