Debugged and added equation fields

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <head>
     <body>
         <h1>Calculadora simple en HTML y JavaScript</h1>
-
-        <div class="head">0</div>
+        <div id="firstNumber">0</div>
+        <div id="ecuation">!</div>
+        <div id="secontNumber">0</div>
+        <div id="head">0</div>
 
         <div class="wrapper">
                 <div class="button" id="7">7</div>
